travis added chmod to script

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ branches:
      only:
           - master
 before_script: ./build/scripts/setup_credentials.sh
-script: ./build/scripts/deploy.sh
+script: 
+  - chmod a+x build/scripts/*
+  - ./build/scripts/deploy.sh
