updated yml with before_install

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 python: "2.7"
 sudo: false
 branches:
-     only:
-          - master
+  only:
+    - master
+before_install:
+    - chmod a+x build/scripts/*
 before_script: ./build/scripts/setup_credentials.sh
 script: ./build/scripts/deploy.sh
