--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: false
 os: trusty
 cache: false
 language: java
+before_install:
+  - openssl aes-256-cbc -K $encrypted_dc2793ba33be_key -iv $encrypted_dc2793ba33be_iv
+    -in assets/server.key.enc -out assets/server.key -d
 script: ant -Dtest.level=RunLocalTests test
 env:
    global:
