--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ sudo: false
 os: trusty
 cache: false
 language: java
+env:
+  - URL=https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
+  global:
+      - SFURL=https://test.salesforce.com
 before_install:
   - openssl aes-256-cbc -K $encrypted_dc2793ba33be_key -iv $encrypted_dc2793ba33be_iv
     -in assets/server.key.enc -out assets/server.key -d
 script: ant -Dtest.level=RunLocalTests test
-env:
-   global:
-      - SFURL=https://test.salesforce.com
