--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ sudo: false
 os: trusty
 cache: false
 language: java
-env:  
-  - SFURL=https://test.salesforce.com
+env:
+  - URL=https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
 before_install:
   - mkdir sfdx
 script: ant -Dtest.level=RunLocalTests test
