--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
       <sf:deploy
           username       = "benson.daniel@ttc.com.bdprimary"
           password       = "test$bd2019EUa0rKgxRcVSaGX1fP5wgxzL"
-          serverurl      = "${sf.serverurl}"
+          serverurl      = "https://test.salesforce.com"
           deployRoot     = "src"
           singlePackage  = "true"
           maxPoll        = "${sf.maxPoll}"
