--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ language: java
 env:
   - URL=https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
 before_install:
+  - openssl aes-256-cbc -K $encrypted_dc2793ba33be_key -iv $encrypted_dc2793ba33be_iv
+    -in assets/server.key.enc -out assets/server.key -d
   - mkdir sfdx
 script: ant -Dtest.level=RunLocalTests test
